Simple Read and Dump to JSON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ PROJECT(OTF2Reader CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# set(CMAKE_MODULE_PATH "${Adaptive_SOURCE_DIR}/cmake")
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 find_package(Threads REQUIRED)
@@ -12,20 +11,23 @@ find_package(Boost REQUIRED COMPONENTS program_options)
 
 add_subdirectory("src/OTF2")
 
-ADD_EXECUTABLE(
+add_executable(
     ${PROJECT_NAME}
     "src/main.cpp"
+    "src/args.hpp"
+    "src/args.cpp"
+    "src/json_dump.hpp"
+    "src/json_dump.cpp"
+
+    "src/nlohmann/json.hpp"
 )
-# set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
+
 target_link_libraries(
     ${PROJECT_NAME}
     Threads::Threads
     Boost::program_options
     OTF2Wrapper
 )
-
-#get_target_property(MAIN_CFLAGS ${PROJECT_NAME} COMPILE_FLAGS)
-#MESSAGE("C++ Flags: ${MAIN_CFLAGS}")
 
 add_subdirectory(tests)
 
